# serverless-rust

./: .envrc.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml
.github/workflows/: ci.yml
cdk/: .eslintrc.json  cdk.json  package-lock.json  package.json
cdk/lib/: api.ts  lambda.ts
cdk/test/: app.test.ts
src/: handler.rs  main.rs
tests/fixtures/: ExampleLambdaContext.json  ExampleLambdaProxyRequest.json
