[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
aws_lambda_events = "0.5.0"
http = "0.2.4"
log = "0.4.14"
serde_json = "1.0.71"
simple_logger = "1.13.0"
tokio = {version = "1", features = ["full"]}

[dev-dependencies]
tokio-test = "*"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
